# cmake_msvc

./: README.md
cmake_link_library/: package.json  slides.md
flutter/: README.md
projects/cipher/: CMakeLists.txt  main.cpp
projects/cipher/CipherFunctions/: CMakeLists.txt  cipher.cpp
projects/createlibrary/: CMakeLists.txt  hello.cpp
projects/usedll/: main.cpp
projects/usedll/lib/: cipher.lib  hello.lib
projects/uselibrary/: CMakeLists.txt  cipher.h  hello.h
projects/uselibrary/lib/: cipher.lib  hello.lib
